# code-kb

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
data/: entity_aliases.yaml
deploy/: codekb-api  codekb-confirmation-worker  codekb-postgres  codekb-qdrant
docs/: README.md  README.zh-CN.md  code-retrieval-design.md  code-retrieval-design.zh-CN.md  data-contracts.md  data-contracts.zh-CN.md  diagnose-webhook-mapping.draft.yaml  diagnose-webhook-samples.draft.yaml  embedding-reranker-strategy.md  embedding-reranker-strategy.zh-CN.md  governance-policy.draft.yaml  integration-credentials-guide.md  integration-credentials-guide.zh-CN.md  interface-spec.md  interface-spec.zh-CN.md  kb-registry.draft.yaml  p0-dependencies.md  p0-dependencies.zh-CN.md  schema.sql
examples/: README.md  README.zh-CN.md  ask.py  langchain_tools.py  langgraph_agent.py
tests/: test_aliases.py  test_answer.py  test_answer_prompt.py  test_api.py  test_bench_latency.py  test_candidates.py  test_code_chunker.py  test_code_nav.py  test_current_user_smoke.py  test_diagnosis.py  test_diagnosis_context.py  test_diagnosis_gaps.py  test_diagnosis_integrations.py  test_diagnosis_readiness.py  test_diagnosis_webhook.py  test_diagnosis_webhook_signing.py  test_embedding.py  test_embedding_config.py  test_embedding_local.py  test_embedding_remote.py  test_external_index_sync.py  test_faithfulness.py  test_feedback_quality.py  test_governance.py  test_im_config.py  test_im_oauth_smoke.py  test_llm.py  (+39 more)
(+107 files in other folders)
